# PVQ

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
docs/: review-results.md
guest-examples/: Cargo.toml  rust-toolchain.toml
guest-examples/.cargo/: config.toml
guest-examples/sum-balance/: Cargo.toml  build.rs
guest-examples/sum-balance-percent/: Cargo.toml  build.rs
guest-examples/sum-balance-percent/src/: main.rs
guest-examples/sum-balance/src/: main.rs
guest-examples/swap-info/: Cargo.toml  build.rs
guest-examples/swap-info/src/: main.rs
guest-examples/test-swap-extension/: Cargo.toml
guest-examples/test-swap-extension/src/: main.rs
guest-examples/total-supply/: Cargo.toml
guest-examples/total-supply/src/: main.rs
poc/runtime/: Cargo.toml  README.md  chopsticks.yml
poc/runtime/src/: lib.rs  pvq.rs
pvq-executor/: Cargo.toml  README.md
pvq-executor/src/: context.rs  error.rs  executor.rs  lib.rs
pvq-extension/: Cargo.toml  README.md
pvq-extension-core/: README.md
pvq-extension-core/src/: lib.rs
pvq-extension-fungibles/: README.md
pvq-extension-fungibles/src/: lib.rs
pvq-extension-swap/: Cargo.toml  README.md
pvq-extension-swap/src/: lib.rs
pvq-extension/procedural/src/: lib.rs
pvq-extension/procedural/src/extension_decl/expand/: metadata.rs
pvq-extension/procedural/src/extensions_impl/expand/: metadata.rs
pvq-extension/procedural/src/extensions_impl/parse/: mod.rs
pvq-extension/procedural/tests/ui/extensions_impl/: missing_impl_struct.stderr
pvq-extension/src/: calldata.rs  context.rs  error.rs  executor.rs  lib.rs  macros.rs  metadata.rs  perm_controller.rs
pvq-primitives/: README.md
pvq-primitives/src/: lib.rs
pvq-program/: Cargo.toml  README.md
pvq-program-metadata-gen/: Cargo.toml  README.md
pvq-program-metadata-gen/src/: features.rs  helper.rs  lib.rs  manifest.rs  metadata_gen.rs
pvq-program/procedural/src/: lib.rs
pvq-program/procedural/src/program/expand/: mod.rs
pvq-program/procedural/src/program/parse/: mod.rs
pvq-program/src/: lib.rs  metadata.rs
pvq-runtime-api/: README.md
pvq-runtime-api/src/: lib.rs
pvq-test-runner/: Cargo.toml  README.md
pvq-test-runner/src/: lib.rs
