[workspace.package]
authors = ["Acala Developers <hello@acala.network>"]
edition = "2021"
repository = "https://github.com/open-web3-stack/PVQ"
license = "Apache-2.0"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "poc/runtime",

    "pvq-program",
    "pvq-program-metadata-gen",
    "pvq-executor",
    "pvq-extension-core",
    "pvq-extension-fungibles",
    "pvq-extension-swap",
    "pvq-extension",
    "pvq-primitives",
    "pvq-runtime-api",
    "pvq-test-runner",

    "examples/example-fungibles",
    "examples/example-helloworld",
]
exclude = ["guest-examples", "vendor"]

[profile.release]
# runtime requires unwinding.
panic = "unwind"
opt-level = 3

[workspace.dependencies]
# local
pvq-program = { path = "pvq-program", default-features = false }
pvq-program-metadata-gen = { path = "pvq-program-metadata-gen" }
pvq-executor = { path = "pvq-executor", default-features = false }
pvq-extension-core = { path = "pvq-extension-core", default-features = false }
pvq-extension-fungibles = { path = "pvq-extension-fungibles", default-features = false }
pvq-extension-swap = { path = "pvq-extension-swap", default-features = false }
pvq-extension = { path = "pvq-extension", default-features = false }
pvq-primitives = { path = "pvq-primitives", default-features = false }
pvq-runtime-api = { path = "pvq-runtime-api", default-features = false }
pvq-test-runner = { path = "pvq-test-runner", default-features = false }

# polkavm
polkavm = { path = "vendor/polkavm/crates/polkavm", default-features = false }
polkavm-derive = { path = "vendor/polkavm/crates/polkavm-derive", default-features = false }

# polkadot-sdk
sp-api = { version = "36.0.1", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
frame = { version = "0.9.1", package = "polkadot-sdk-frame", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }

# genesis builder that allows us to interacto with runtime genesis config
sp-genesis-builder = { version = "0.17.0", default-features = false }

# wasm builder
substrate-wasm-builder = { version = "26.0.1" }

# nostd
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
    "serde",
] }
tracing = { version = "0.1.40", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.110", default-features = false }
thiserror = { version = "2", default-features = false }

# std
clap = { version = "4.5.4", features = ["derive"] }
env_logger = { version = "0.11.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = { version = "3.9.0" }
toml = { version = "0.8", features = ["preserve_order"] }

fortuples = "0.9"

# proc macros
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
trybuild = "1"
