[workspace]
members = [
    "sum-balance",
    "sum-balance-percent",
    "sum-balance-hand-written",
    "total-supply",
    "total-supply-hand-written",
    "transparent-call-hand-written",
    "test-swap-extension",
    "swap-info",
]
resolver = "2"

[workspace.dependencies]
parity-scale-codec = { version = "3", default-features = false, features = [
    "derive",
] }
pvq-program = { path = "../pvq-program", default-features = false }
pvq-program-metadata-gen = { path = "../pvq-program-metadata-gen" }
polkavm-derive = { path = "../vendor/polkavm/crates/polkavm-derive" }
acala-primitives = { git = "https://github.com/AcalaNetwork/Acala", branch = "master", default-features = false }
cfg-if = "1.0"
