[workspace]
members = ["sum-balance", "sum-balance-percent", "total-supply", "swap-info"]
resolver = "2"

[workspace.dependencies]
parity-scale-codec = { version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
    "serde",
] }
pvq-program = { path = "../pvq-program", default-features = false }
pvq-program-metadata-gen = { path = "../pvq-program-metadata-gen" }
polkavm-derive = { path = "../vendor/polkavm/crates/polkavm-derive" }
acala-primitives = { git = "https://github.com/AcalaNetwork/Acala", branch = "master", default-features = false }
cfg-if = "1.0"
