[workspace]
members = ["sum-balance", "sum-balance-percent", "total-supply", "swap-info"]
resolver = "2"

[workspace.dependencies]
parity-scale-codec = { version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.3", default-features = false, features = [
    "derive",
    "serde",
] }
pvq-program = { path = "../pvq-program", default-features = false }
pvq-program-metadata-gen = { path = "../pvq-program-metadata-gen" }
polkavm-derive = { path = "../vendor/polkavm/crates/polkavm-derive" }
xcm = { version = "16.2.0", default-features = false, package = "staging-xcm" }
sp-io = { version = "40.0.1", default-features = false, features = [
    "disable_allocator",
    "disable_panic_handler",
] }
cfg-if = "1.0"
