[package]
name = "pvq-program-metadata-gen"
description = "PVQ program metadata generation"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
clap = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
