[package]
name = "pvq-program"
description = "PVQ program utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pvq-program-procedural = { path = "procedural" }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
polkavm-derive = { workspace = true }

[features]
default = ["std"]
std = []
